Remove Unused GitHub Actions; Linting Clean-up

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -20,7 +20,7 @@ linters:
     - gosec
     - nilerr
     - predeclared
-    - revive
+      #    - revive
     - rowserrcheck
     - sqlclosecheck
     - tparallel
